...
  Dialog(onDismissRequest = onDismiss) {
    Column(
        modifier =
            Modifier.clip(RoundedCornerShape(8.dp))
                .background(androidx.compose.material3.MaterialTheme.colorScheme.background)
                .padding(16.dp)
                .testTag("confirm")) {
          Text("Are you sure you want to delete $number folder(s) ?")
          Row(
              horizontalArrangement = Arrangement.SpaceBetween,
              modifier = Modifier.fillMaxWidth()) {
                Button(
                    onClick = onConfirm,
                    modifier = Modifier.testTag("yes"),
                    colors = ButtonDefaults.buttonColors(containerColor = Color.Green)) {
                      Text("Yes")
                    }
                Button(
                    onClick = onDismiss,
                    modifier = Modifier.testTag("no"),
                    colors = ButtonDefaults.buttonColors(containerColor = Color.Red)) {
                      Text("No")
                    }
              }
        }
  }
...
      onDismissRequest = onDismiss,
      confirmButton = {
        TextButton(onClick = { onConfirm(name) }, modifier = Modifier.testTag("confirm")) {
          Text("Confirm")
        }
      },
      modifier = Modifier.testTag("renameDialog"),
      dismissButton = {
        TextButton(onClick = onDismiss, modifier = Modifier.testTag("cancel")) { Text("Cancel") }
      },
      title = { Text("Rename file") },
      text = {
        OutlinedTextField(
            value = name,
            modifier = Modifier.testTag("textField"),
            onValueChange = { name = it },
            label = { Text("Enter new name") })
      },
      backgroundColor = androidx.compose.material3.MaterialTheme.colorScheme.background)
}

...
    onDownload: () -> Unit,
    onDelete: () -> Unit
) {
  var expanded by remember { mutableStateOf(false) }

  Box(modifier) {
    IconButton(onClick = { expanded = true }, modifier = Modifier.testTag("editButton")) {
      Icon(Icons.Default.Edit, contentDescription = "Edit File")
    }

    DropdownMenu(
        expanded = expanded,
        modifier = Modifier.width(IntrinsicSize.Min),
        onDismissRequest = { expanded = false },
        properties = PopupProperties(focusable = false)) {
          DropdownMenuItem(
              text = { Text("Rename", modifier = Modifier.fillMaxWidth()) },
              modifier = Modifier.fillMaxWidth().testTag("rename"),
              onClick = {
                onRename()
                expanded = false
              })
          DropdownMenuItem(
              text = { Text("Download", modifier = Modifier.fillMaxWidth()) },
              modifier = Modifier.fillMaxWidth().testTag("download"),
              onClick = {
                onDownload()
                expanded = false
              })
          DropdownMenuItem(
              text = { Text("Delete", modifier = Modifier.fillMaxWidth()) },
              modifier = Modifier.fillMaxWidth().testTag("delete"),
              onClick = {
                onDelete()
                expanded = false
              })
        }
  }
...
